# ZS-Language

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitignore  DoGraph.cpp  DoGraph.h  Enums.h  LanguageFunctions.cpp  LanguageFunctions.h  LexicalAnalysis.cpp  LexicalAnalysis.h  Makefile  Rules.cpp  Rules.h  StackFunctions.cpp  StackFunctions.h  Structs.h  TreeToAsm.cpp  TreeToCode.cpp  flake.nix  justfile  main.cpp  meson.build
Front-End/: LanguageFunctions.cpp  LexicalAnalysis.cpp  Rules.cpp  TreeToAsm.cpp  main.cpp
Middle-End/: Optimise.cpp  main.cpp
Reverse-End/: TreeToCode.cpp  main.cpp
bins/: meson.build
bins/FrontEnd/: main.cpp  meson.build
bins/MiddleEnd/: main.cpp  meson.build
bins/ReverseEnd/: main.cpp  meson.build
include/Front-End/: TreeToAsm.h
include/Middle-End/: Optimise.h
libs/: meson.build
libs/Common/: DoGraph.cpp  DoGraph.h  Enums.h  IO.cpp  IO.h  StackFunctions.cpp  StackFunctions.h  Structs.h  meson.build
libs/FrontEnd/: LanguageFunctions.cpp  LanguageFunctions.h  LexicalAnalysis.cpp  LexicalAnalysis.h  ReadTree.cpp  ReadTree.h  Rules.cpp  Rules.h  TreeToAsm.cpp  TreeToAsm.h  meson.build
libs/MiddleEnd/: Optimise.cpp  Optimise.h  meson.build
libs/ReverseEnd/: TreeToCode.cpp  TreeToCode.h  meson.build
tests/: meson.build  tests.cpp
tests/FrontEnd/: meson.build  test.cpp
tests/FrontEnd/resources/: code_draw  code_draw.asm.expected  code_draw.tree.expected  code_factorial.asm.expected  code_factorial.tree.expected  code_square.asm.expected  code_square.tree.expected  meson.build
tests/MiddleEnd/: meson.build
tests/ReverseEnd/: meson.build
