project(
    'Language',
    'cpp',
    version: '0.1',
    meson_version: '>= 1.3.0',
    default_options: {
        'cpp_std': 'c++20',
        'c_std': 'c20',
        'optimization': '0',
        'debug': 'true',
        'warning_level': '3',
        'werror': 'false',
        'b_sanitize': 'address,undefined',
        'b_lundef': 'false',
        'b_pie': 'true',
        'default_library': 'static',
    },
)

cpp_args = [
    '-ggdb3',
    '-Weffc++',
    '-Wc++14-compat',
    '-Wmissing-declarations',
    '-Wcast-align',
    '-Wcast-qual',
    '-Wchar-subscripts',
    '-Wconversion',
    '-Wctor-dtor-privacy',
    '-Wempty-body',
    '-Wfloat-equal',
    '-Wformat-nonliteral',
    '-Wformat-security',
    '-Wformat=2',
    '-Winline',
    '-Wnon-virtual-dtor',
    '-Woverloaded-virtual',
    '-Wpacked',
    '-Wpointer-arith',
    '-Winit-self',
    '-Wshadow',
    '-Wsign-conversion',
    '-Wsign-promo',
    '-Wstrict-overflow=2',
    '-Wsuggest-override',
    '-Wswitch-default',
    '-Wswitch-enum',
    '-Wundef',
    '-Wunreachable-code',
    '-Wvariadic-macros',
    '-Wno-missing-field-initializers',
    '-Wno-narrowing',
    '-Wno-old-style-cast',
    '-Wno-varargs',
    '-Wstack-protector',
    '-fcheck-new',
    '-fsized-deallocation',
    '-fstack-protector',
    '-fstrict-overflow',
    '-fno-omit-frame-pointer',
    '-Wlarger-than=8192',
    '-Werror=vla',
]

add_project_arguments(cpp_args, language: ['c', 'cpp'])

subdir('libs')
subdir('bins')
